# organizator-3

./: .gitignore  404.html  Plan.md  README.md  index.html  justfile  print.html  searcher-09f2665d.js  searcher-c2a407aa.js  searchindex-79250bbc.js  searchindex.js  searchindex.json  toc-1b82f450.js  toc-dc9fa37e.js  toc.html  toc.js  try_build.sh
.github/codeql/: codeql-config.yml
.github/workflows/: book.yml  rust.yml
Backend/Server/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  build.sh  build_hyper_organizator.sh  note.txt  run_test_with_output.sh  rustfmt.toml
Backend/Server/SQL/: create_default_memo_groups.sql  get_memo_access_level_for_requester.sql  get_user_by_name.sql  memo_read.sql  update_password.sql  upgrade_script.sql
Backend/Server/SQL/Security/: database_design.md
Backend/Server/SQL/Updates/: 001_change_password_hash_to_argon.sql  002_set_current_user.sql  README.md
Backend/Server/hyper-organizator/: Cargo.toml  build_docker_image.sh  call_with_ssl.sh  justfile  login_and_call.sh  run.sh  run_with_console.sh  settings.toml
Backend/Server/hyper-organizator/Docker/: Dockerfile
Backend/Server/hyper-organizator/IntegrationTests/: full_memogroup_details.sh  read_memo.sh  read_memogroup.sh  read_memogroup_permissions.sh
Backend/Server/hyper-organizator/src/: authentication.rs  authorize_header.rs  check_security.rs  db.rs  logging.rs  main.rs  metrics.rs  model.rs  multipart.rs  response_utils.rs  router.rs  server.rs  settings.rs  typedef.rs  under_construction.rs
Backend/Server/hyper-organizator/src/authentication/: authorize_header.rs  check_security.rs  login.rs
Backend/Server/hyper-organizator/src/logging/: logging_trace_span.rs
Backend/Server/hyper-organizator/src/metrics/: metrics_endpoint.rs  metrics_layer.rs  numeric_request_id.rs  prometheus_metrics.rs
Backend/Server/hyper-organizator/src/sql/: get_all_memo_titles.sql  get_explicit_memo_permissions.sql  get_file_security.sql  get_memo.sql  get_memo_groups_for_user.sql  get_user.sql  insert_filestore.sql  memo_groups.sql  search_memo.sql  set_current_user.sql  user_groups.sql  write_memo.sql
Backend/Server/hyper-organizator/src/sql/admin/: all_user_groups.sql  filestore.sql  memo_stats.sql  set_admin_user.sql
Backend/Server/identity/: Cargo.toml  justfile  run.sh  settings.toml
Backend/Server/identity-organizator/: Cargo.toml  justfile  settings.toml
Backend/Server/identity-organizator/IntegrationTests/: login.sh  update_password.sh
Backend/Server/identity-organizator/src/: db.rs  main.rs
Backend/Server/identity-organizator/src/sql/: login.sql
Backend/Server/identity/IntegrationTests/: change_password_multiple.sh  login.sh  update_password.sh
Backend/Server/identity/src/: db.rs  main.rs  router.rs
Backend/Server/identity/src/sql/: set_requester.sql  update_password.sql
Backend/Server/k8s/: alias.sh  build_hyper_organizator.sh  hyper-organizator-configmap.yml  hyper-organizator-deployment.yml  hyper-organizator-ingress.yml  hyper-organizator-service.yml  identity-configmap.yml  identity-deployment.yml  identity-service.yml  install_identity.sh  notes.txt  reload_nginx.sh  start_minikube.sh
Backend/Server/k8s/identity-helm/: Chart.yaml  values.yaml
Backend/Server/k8s/identity-helm/templates/: identity-configmap.yaml  identity-deployment.yml
Backend/Server/lib-hyper-organizator/: Cargo.toml  README.md  justfile  run_tests_with_output.sh
Backend/Server/lib-hyper-organizator/src/: authentication.rs  lib.rs  multipart.rs  postgres.rs  response_utils.rs  server.rs  settings.rs  swagger.rs  typedef.rs  under_construction.rs
Backend/Server/lib-hyper-organizator/src/authentication/: authentication_layers.rs  check_security.rs  jot.rs  login.rs
Backend/Server/lib-hyper-organizator/src/database/: database_error.rs
Backend/Server/lib-hyper-organizator/src/logging/: logging_trace_span.rs
Backend/Server/lib-hyper-organizator/src/metrics/: metrics_endpoint.rs  metrics_layer.rs  numeric_request_id.rs  prometheus_metrics.rs
Backend/Server/password_hash_generator/: Cargo.toml
Backend/Server/password_hash_generator/src/: main.rs
Backend/Server/systemd/: hyper-organizator.service  identity-organizator.service
DevEnvironment/: .gitignore
DevEnvironment/Certificates/: README.md  cacert.sh  hostcert.sh  run.sh  sign.sh
Doc/: book.toml  justfile
Doc/Architecture/: book.toml
Doc/Architecture/src/: SUMMARY.md
Doc/Architecture/src/dev_setup/: dns_server.md  nginx.md
Doc/src/: README.md  SUMMARY.md
Doc/src/backend/: README.md  security.md
Doc/src/dev_setup/: README.md  dns_server.md  nginx.md
Frontend/: deploy.sh  justfile
Frontend/Memo/: .gitignore  justfile  karma.jasmine.conf.js  karma.mocha.conf.js  make_favicon.txt  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
Frontend/Memo/deb-links/: login.html  logout.html  memo.html  org-manifest.json
Frontend/Memo/docs/: synchro.md
Frontend/Memo/src/: generic-tsconfig.json  tsconfig.json  tsconfig.tsbuildinfo
Frontend/Memo/src/build_tools/: service_worker_versioner.js
Frontend/Memo/src/html/: login.html  logout.html  memo.html  org-manifest.json  password.html
Frontend/Memo/test/vitest/: db.spec.ts  memo_processing.spec.ts  merge.spec.ts  util.spec.ts  (+2 more)
Frontend/Nginx/: .gitignore  Dockerfile  README.md  index.html  justfile  nginx.conf
Frontend/Nginx/Scripts/: docker_image_build.sh  docker_run_frontend.sh  docker_run_frontent.sh  setup_dummy_network.sh
Frontend/Nginx/snippets/: organizator
Frontend/organizator-wasm/: Cargo.toml  justfile
Frontend/organizator-wasm/src/: aes.rs  barcode_svg.rs  lib.rs  markdown.rs  memo.rs  merge.rs
backend/: index.html  security.html
debian/: .gitignore  changelog  control  gitignore  organizator.dirs  organizator.install  postinst  postrm  prerm  rules
dev_setup/: dns_server.html  index.html  nginx.html  postgres.html
frontend/: index.html
(+25 files in other folders)
