[workspace]

members = [
  "hyper-organizator",
  "lib-hyper-organizator",
  "identity",
]

# The docs on how to use a centralized set of dependency versions can be found here:
# https://github.com/rust-lang/rfcs/blob/master/text/2906-cargo-workspace-deduplicate.md#workspace-level-dependencies
[workspace.dependencies]
hyper= { version="0.14.16", features = ["full", "http1", "http2"] }
futures = "0.3"
futures-util = "0.3"
pin-project-lite = "0.2"
tokio = { version="1", features = ["full", "tracing"] }
pretty_env_logger = "0.4.0"
log = "0.4"
lazy_static = "1.4"
itertools = "0.10"
serde_json = "1.0"
serde_yaml = "0.8"
serde_urlencoded = "0.7"
serde = { version = "1.0", features = ["derive"] }
bytes = "1.0"
regex = "1.4"
thiserror = "1.0"
time = { version = "0.3", features = ["std", "formatting", "local-offset", "parsing"]}
indoc = "2.0"
rand = "0.8"
flate2 = "1.0"
mimalloc = { version = "*", default-features = false }
url = "2"
base64 = "0.20"

tower-http = { version = "0.3", features = ["full"] }
http = "0.2"
tower = { version = "0.4", features = ["full"] }
tower-layer = "0.3"
tower-service = "0.3"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
console-subscriber = "0.1"

ring = { version = "0.16", features = ["std"] }
jsonwebtoken = "8.1"

opentelemetry = "0.18"
opentelemetry-prometheus = "0.11"
prometheus = "0.13"

toml = "0.5"

deadpool-postgres = "*"
tokio-postgres = "*"

lib-hyper-organizator = { path = "lib-hyper-organizator" }

utoipa = "3"
utoipa-swagger-ui = "3"

[profile.release]
lto = true
