[package]
name = "hyper-organizator"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper= { version="0.14.16", features = ["full", "http1", "http2"] }
futures = "0.3.0"
tokio = { version="1.14.1", features = ["full"] }
pretty_env_logger = "0.4.0"
log = "0.4.14"
config = "0.11.0"
lazy_static = "1.4.0"
itertools = "0.10.3"
serde_json = "1.0"
serde_yaml = "0.8"
serde = { version = "1.0", features = ["derive"] }
bytes = "1.0.1"
regex = "1.4.5"
thiserror = "1.0"
time = { version = "0.3.7", features = ["std", "formatting", "local-offset", "parsing"]}
indoc = "1.0"
rand = "0.8.4"
flate2 = "1.0"
mimalloc = { version = "*", default-features = false }
url = "2"

tower-http = { version = "0.3.4", features = ["full"] }
http = "0.2"
tower = { version = "0.4", features = ["full"] }
tracing-subscriber = "0.3.11"
anyhow = "1.0"
tracing = "0.1"

ring = { version = "0.16.20", features = ["std"] }
jsonwebtoken = "8.1.1"

opentelemetry = "0.18"
opentelemetry-prometheus = "0.11"
prometheus = "0.13"


[profile.release]
lto = true

