[package]
name = "identity"
version = "0.1.0"
edition = "2021"
authors = ["Ovidiu Ionescu <ovidiu@ionescu.net>"]
description = """
Identity service for the Organizator project.
"""
repository = "https://github.com/ovidiu-ionescu/organizator-3"
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
pin-project-lite = { workspace = true }
tokio = { workspace = true }
pretty_env_logger = { workspace = true }
log = { workspace = true }
config = { workspace = true }
lazy_static = { workspace = true }
itertools = { workspace = true }
serde_json = { workspace = true }
serde_urlencoded = { workspace = true }
serde_yaml = { workspace = true }
serde = { workspace = true }
bytes = { workspace = true }
regex = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
indoc = { workspace = true }
rand = { workspace = true }
flate2 = { workspace = true }
mimalloc = { workspace = true }
url = { workspace = true }

tower-http = { workspace = true }
http = { workspace = true }
tower = { workspace = true }
tower-service = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
#console-subscriber = { workspace = true }

ring = { workspace = true }
jsonwebtoken = { workspace = true }

opentelemetry = { workspace = true }
opentelemetry-prometheus = { workspace = true }
prometheus = { workspace = true }

toml = { workspace = true }

deadpool-postgres = { workspace = true }
tokio-postgres = { workspace = true }

lib-hyper-organizator = { workspace = true, features = ["security", "postgres"] }
